# optimo

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yml
examples/: vdp.mo  vdp.py  vdp_prescribed_input.mo
optimo/: helpers.py  model.py  vdp.mo  vdp.py
tests/: Dockerfile  Makefile  test_examples.py  utilities.py
tests/references/: vdp_ref_ocp.csv  vdp_ref_ocp_with_input.csv  vdp_ref_sim.csv  vdp_ref_sim_with_input.csv
wedoco_optimo/: helpers.py  model.py  plots.py
