[tool.poetry]
name = "wedoco_optimo"
version = "0.1.3"
description = "Optimization of Modelica models"
authors = ["Wedoco <javier.arroyo@wedoco.io>"]
keywords = ["modelica", "casadi", "optimization", "model predictive control"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ompython = "^3.4.0"
numpy = "^1.22.4"
pandas = "^1.5.2"
scipy = "^1.9.0"
matplotlib = "3.8.2"
casadi = "^3.7.0"
rockit-meco = "^0.6.6"
fmpy = "^0.3.19"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
flake8 = "^7.0.0"
black = "^23.0.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
